--- a/crawler/UI/ybfui.html
+++ b/crawler/UI/ybfui.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
+    /* Global layout */
     body {
         font-family: Arial, sans-serif;
         background: #f2f2f2;
@@ -22,6 +23,7 @@
         font-weight: bold;
     }
 
+    /* Filter container */
     .filter-box {
         background: white;
         padding: 20px;
@@ -48,7 +50,7 @@
         border: 1px solid #ccc;
     }
 
-    /* Dual Price Slider */
+    /* Dual price slider UI */
     .range-slider {
         width: 100%;
         position: relative;
@@ -63,7 +65,6 @@
         border-radius: 5px;
         position: absolute;
         top: 16px;
-        z-index: 1;
     }
 
     .slider-range {
@@ -72,7 +73,6 @@
         position: absolute;
         top: 16px;
         border-radius: 5px;
-        z-index: 2;
     }
 
     .range-slider input[type=range] {
@@ -92,7 +92,6 @@
         background: #0077cc;
         cursor: pointer;
         pointer-events: all;
-        position: relative;
         z-index: 3;
     }
 
@@ -100,12 +99,12 @@
         display: flex;
         justify-content: space-between;
         font-size: 14px;
-        margin-top: 8px;
     }
 
+    /* Search results layout */
     .results {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
         gap: 20px;
         padding: 20px;
         max-width: 1100px;
@@ -119,28 +118,18 @@
         box-shadow: 0 0 6px rgba(0,0,0,0.1);
         display: flex;
         flex-direction: column;
-        align-items: center;
-    }
-
-    .item img {
-        width: 100%;
-        border-radius: 8px;
-        height: 220px;
-        object-fit: cover;
-        margin-bottom: 10px;
     }
 
     .item-title {
         font-size: 18px;
         font-weight: bold;
-        text-align: center;
         margin-bottom: 5px;
     }
 
-    .item-price {
-        color: #444;
+    .item-info {
+        color: #555;
         margin-bottom: 10px;
-        font-size: 16px;
+        font-size: 14px;
     }
 
     .item a {
@@ -149,14 +138,9 @@
         font-weight: bold;
         margin-top: auto;
     }
-
-    @media (max-width: 600px) {
-        header { font-size: 22px; }
-        .item-title { font-size: 16px; }
-    }
 </style>
-
 </head>
+
 <body>
 
 <header>Your Budget Friend</header>
@@ -164,27 +148,23 @@
 <div class="filter-box">
     <div class="filter-row">
 
-        <!-- Clothing Type -->
+        <!-- CATEGORY DROPDOWN (DYNAMICALLY LOADED) -->
         <label for="type">Clothing Type</label>
         <select id="type">
             <option value="">Any</option>
-            <option value="shirt">Shirts</option>
-            <option value="pants">Pants</option>
-            <option value="jacket">Jackets</option>
-            <option value="hoodie">Hoodies</option>
         </select>
 
-        <!-- Sorting -->
+        <!-- SORTING OPTIONS -->
         <label>Sort By</label>
         <select id="sort">
             <option value="">None</option>
             <option value="priceAsc">Price: Low → High</option>
             <option value="priceDesc">Price: High → Low</option>
-            <option value="nameAsc">Alphabetical: A → Z</option>
-            <option value="nameDesc">Alphabetical: Z → A</option>
+            <option value="nameAsc">A → Z</option>
+            <option value="nameDesc">Z → A</option>
         </select>
 
-        <!-- Price Range -->
+        <!-- PRICE SLIDER -->
         <label>Price Range</label>
         <div class="range-slider">
             <div class="slider-track"></div>
@@ -199,54 +179,116 @@
             <span id="maxVal">$200</span>
         </div>
 
-        <!-- Search Button -->
-        <button onclick="applyFilters()" style="padding:12px; background:#0077cc; border:none; color:white; border-radius:5px; cursor:pointer;">
+        <!-- SEARCH BUTTON -->
+        <button onclick="applyFilters()" style="padding:12px; background:#0077cc; border:none; color:white; border-radius:5px;">
             Search
         </button>
+
+        <!-- CRAWLER TRIGGER BUTTON -->
+        <button onclick="triggerCrawl()" style="padding:12px; background:#28a745; border:none; color:white; border-radius:5px;">
+            Crawl New Data
+        </button>
+
+        <p id="crawl-status" style="text-align:center; margin-top:10px; font-weight:bold;"></p>
     </div>
 </div>
 
-<!-- Results -->
+<!-- RESULTS -->
 <div class="results" id="results"></div>
 
 <script>
 let items = [];
+let categories = new Set();
 
+/* -----------------------------
+   TRIGGER BACKEND CRAWLER
+------------------------------*/
+async function triggerCrawl() {
+    const status = document.getElementById("crawl-status");
+    status.innerText = "⏳ Running crawler…";
+
+    try {
+        const res = await fetch("http://127.0.0.1:5000/run-crawler");
+        const result = await res.json();
+
+        if (result.status === "error") {
+            status.innerText = result.message;
+            return;
+        }
+
+        status.innerText = "Processing data…";
+
+        setTimeout(async () => {
+            await loadData();
+            status.innerText = "Data updated!";
+        }, 10000);
+
+    } catch (err) {
+        status.innerText = "Could not reach backend.";
+    }
+}
+
+/* -----------------------------
+   LOAD DATA JSON
+------------------------------*/
 async function loadData() {
     try {
         const response = await fetch("clothing_data.json");
         items = await response.json();
+
+        categories.clear();
+        items.forEach(item => categories.add(item.category));
+
+        populateCategoryDropdown();
     } catch (error) {
-        console.log("Waiting for crawler to generate clothing_data.json...");
+        console.log("clothing_data.json not found yet.");
     }
 }
 
-function extractPrice(item) {
-    return parseFloat((item.price || "").replace(/[^0-9.]/g, "")) || 0;
+/* -----------------------------
+   POPULATE CATEGORY DROPDOWN
+------------------------------*/
+function populateCategoryDropdown() {
+    const select = document.getElementById("type");
+    select.innerHTML = `<option value="">Any</option>`;
+
+    categories.forEach(cat => {
+        const opt = document.createElement("option");
+        opt.value = cat.toLowerCase();
+        opt.textContent = cat;
+        select.appendChild(opt);
+    });
 }
 
+/* -----------------------------
+   PRICE SLIDER UPDATE
+------------------------------*/
 function updateSlider() {
-    let minSlider = document.getElementById("minSlider");
-    let maxSlider = document.getElementById("maxSlider");
+    let min = document.getElementById("minSlider").value;
+    let max = document.getElementById("maxSlider").value;
 
-    let minVal = parseInt(minSlider.value);
-    let maxVal = parseInt(maxSlider.value);
-
-    if (minVal > maxVal) {
-        [minSlider.value, maxSlider.value] = [maxVal, minVal];
-        minVal = parseInt(minSlider.value);
-        maxVal = parseInt(maxSlider.value);
+    if (parseInt(min) > parseInt(max)) {
+        [min, max] = [max, min];
+        document.getElementById("minSlider").value = min;
+        document.getElementById("maxSlider").value = max;
     }
 
-    document.getElementById("minVal").innerText = "$" + minVal;
-    document.getElementById("maxVal").innerText = "$" + maxVal;
+    document.getElementById("minVal").innerText = "$" + min;
+    document.getElementById("maxVal").innerText = "$" + max;
 
-    const percentMin = (minVal / 200) * 100;
-    const percentMax = (maxVal / 200) * 100;
+    const percentMin = (min / 200) * 100;
+    const percentMax = (max / 200) * 100;
 
-    const rangeBar = document.getElementById("sliderRange");
-    rangeBar.style.left = percentMin + "%";
-    rangeBar.style.right = (100 - percentMax) + "%";
+    const range = document.getElementById("sliderRange");
+    range.style.left = percentMin + "%";
+    range.style.right = (100 - percentMax) + "%";
+}
+
+/* -----------------------------
+   SORTING FUNCTION
+------------------------------*/
+function extractPrice(item) {
+    return parseFloat((item.price || "0").replace(/[^0-9.]/g, "")) || 0;
 }
 
 function sortItems(list, sortType) {
@@ -257,6 +299,9 @@ function sortItems(list, sortType) {
     return list;
 }
 
+/* -----------------------------
+   FILTER + DISPLAY RESULTS
+------------------------------*/
 function applyFilters() {
     const type = document.getElementById("type").value.toLowerCase();
     const sortType = document.getElementById("sort").value;
@@ -268,13 +313,14 @@ function applyFilters() {
     resultsBox.innerHTML = "";
 
     let filtered = items.filter(item => {
-        let priceValue = extractPrice(item);
+        const price = extractPrice(item);
+        const category = (item.category || "").toLowerCase();
 
-        let typeMatch = type === "" || item.name.toLowerCase().includes(type);
-        let minMatch = priceValue >= minPrice;
-        let maxMatch = priceValue <= maxPrice;
-
-        return typeMatch && minMatch && maxMatch;
+        return (
+            (type === "" || category.includes(type)) &&
+            price >= minPrice &&
+            price <= maxPrice
+        );
     });
 
     filtered = sortItems(filtered, sortType);
@@ -288,12 +334,11 @@ function applyFilters() {
         const div = document.createElement("div");
         div.className = "item";
 
-        const imgHtml = item.image ? `<img src="${item.image}" alt="Product image">` : "";
-
         div.innerHTML = `
-            ${imgHtml}
             <div class="item-title">${item.name}</div>
-            <div class="item-price">${item.price}</div>
+            <div class="item-info">Price: ${item.price}</div>
+            <div class="item-info">Availability: ${item.availability}</div>
+            <div class="item-info">Category: ${item.category}</div>
             <a href="${item.link}" target="_blank">View Item</a>
         `;
 
